# obs-ai-transcription-filter

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  INSTALL.md  README.md  auto-build.ps1  build-msi-fixed.ps1  build-msi.ps1  build-simple.ps1  setup-dependencies.ps1  test-build.bat
data/locale/: en-US.ini
installer/: License.rtf  Product.wxs  build-installer.bat
src/: ai-transcription-filter.c  audio-buffer.c  audio-buffer.h  llm-corrector.cpp  llm-corrector.h  obs-ai-transcription-filter.c  whisper-engine.cpp  whisper-engine.h
